--- a/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.module.css
+++ b/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.module.css
@@ -8,7 +8,7 @@
 }
 
 .NavigationItem a {
-    color: #000; 
+    color: #FFFFFF; 
     text-decoration: none; 
     height: 100%; 
     width: 100%; 
@@ -21,6 +21,6 @@
 .NavigationItem a:hover, 
 .NavigationItem a:active, 
 .NavigationItem a.active {
-    border-bottom: 2px solid #000; 
-    color: #a143bf; 
+    border-bottom: 2px solid #FFFFFF; 
+    color: #5CF64A; 
 }
