--- a/src/components/Pages/Home/Home.module.scss
+++ b/src/components/Pages/Home/Home.module.scss
@@ -1,4 +1,4 @@
-.Container {
+.Home {
     font-style: italic; 
     position: absolute; 
     transform: translate(-50%, -50%); 
@@ -7,7 +7,7 @@
     pointer-events: none; 
 }
 
-.Container2 {
+.ButtonContainer {
     font-style: italic; 
     position: absolute; 
     transform: translate(-50%, -50%); 
@@ -125,7 +125,7 @@
     letter-spacing: 1em; 
     text-align: center; 
     position: absolute; 
-    left: 17%; 
+    left: 22%; 
     animation: glitch-2 5s 5.02s infinite; 
 }
 
