--- a/src/components/UI/ProjectCard/Card.module.css
+++ b/src/components/UI/ProjectCard/Card.module.css
@@ -1,11 +1,31 @@
 .Card{
     background-color: #333; 
-    padding: 10px; 
     border-radius: 10px; 
     display: flex; 
     align-items: center; 
     justify-content: center; 
-    z-index: 500; 
+    z-index: 50; 
+}
+
+.Card button {
+    background: transparent;
+    display: inline-block; 
+    padding: 0.35em 1.2em; 
+    border: 0.1em solid #FFFFFF; 
+    margin: 0 0.3em 0.3em 0; 
+    border-radius: 0.12em; 
+    box-sizing: border-box; 
+    text-decoration: none; 
+    color: #FFFFFF; 
+    text-align: center; 
+    transition: all 0.2s; 
+    position: absolute; 
+    opacity: 0; 
+}
+
+.Card button:hover {
+    color: black; 
+    background-color: #fff;
 }
 
 .Card img {
@@ -13,8 +33,10 @@
     max-height: 100%; 
 }
 
-.Card:hover {
-    background-color: white; 
+.Card:hover img{
     opacity: 0.5; 
 }
 
+.Card:hover button { 
+    opacity: 1; 
+}
