--- a/src/components/Pages/Projects/Projects.module.css
+++ b/src/components/Pages/Projects/Projects.module.css
@@ -5,16 +5,13 @@
     top: 50%;
     left: 50%; 
     margin: 20px auto; 
-    width: 1200px; 
-    height: 600px; 
     grid-template-columns: 600px 600px; 
-    grid-row: auto auto; 
+    grid-template-rows: 350px auto; 
     grid-column-gap: 20px; 
     grid-row-gap: 20px; 
 }
 
 .Scanlines {
-    overflow: hidden; 
     mix-blend-mode: difference;
     pointer-events: none;
 }
