--- a/src/components/Pages/Projects/Ecomm.module.css
+++ b/src/components/Pages/Projects/Ecomm.module.css
@@ -37,18 +37,17 @@
 .Left .ToolContainer {
     display: grid; 
     margin-top: 15px; 
-    grid-template-columns: 60px 60px 60px 60px 60px; 
+    grid-template-columns: 75px 75px 75px 75px 75px; 
     grid-column-gap: 5px; 
     grid-row-gap: 20px; 
 }
 
 .Left .Tool {
-    color: #c2c2c2; 
-    border: 1px solid #000; 
-    width: 60px; 
+    border: 1px solid #23b5d3; 
+    width: 75px; 
     height: 23px; 
     margin: 0; 
-    font-size: 13px; 
+    font-size: 12px; 
     display: flex; 
     justify-content: center;
 }
@@ -70,7 +69,7 @@
     display: grid; 
     margin-top: 15px; 
     grid-template-columns: 100px 100px; 
-    grid-column-gap: 5px; 
+    grid-column-gap: 10px; 
     grid-row-gap: 20px; 
 }
 
@@ -90,4 +89,46 @@
 
 .Left i {
     padding-right: 3px; 
+}
+
+@media (max-width: 1137px) {
+    .Left {
+        text-align: center; 
+        width: 632px; 
+    }
+
+    .Right {
+        width: auto; 
+    }
+
+    .Left .ToolContainer{
+        justify-content: center;
+    }
+
+    .Left .Desc {
+        max-width: none; 
+    }
+
+    .Left .ButtonContainer {
+        justify-content: center; 
+    }
+}
+
+@media (max-width: 400px) {
+    .Right {
+        height: 200px; 
+        justify-content: center; 
+    }
+    .Left {
+        width: 365px; 
+    }
+
+    .Left .ToolContainer {
+        grid-template-columns: 60px 60px 60px 60px 60px; 
+    }
+
+    .Left .Tool { 
+        width: 60px; 
+        font-size: 10px; 
+    }
 }
