--- a/src/components/UI/Modal/Modal.module.css
+++ b/src/components/UI/Modal/Modal.module.css
@@ -1,4 +1,5 @@
 .Modal {
+    font-family: 'Open Sans';
     position: absolute; 
     background-color: #2e2e2e; 
     border: 1px solid #000; 
@@ -9,3 +10,9 @@
     top: 50%; 
     transform: translate(-50%, -50%);
 }
+
+@media (max-width: 1137px) {
+    .Modal {
+        display: inline-block; 
+    }
+} 
