--- a/src/components/UI/ProjectCard/Card.module.css
+++ b/src/components/UI/ProjectCard/Card.module.css
@@ -8,6 +8,7 @@
 }
 
 .Card button {
+    font-family: 'Open Sans'; 
     background: transparent;
     display: inline-block; 
     padding: 0.35em 1.2em; 
